# crew_ai_mastery

./: .env.example  .gitignore  =1.7.0  AI_Impact_Acceleration_Plan_Complete.md  CHECKLIST.md  Competition_Briefing_Document.txt  DEMO_ANALYSIS.md  DEMO_README.md  FINAL_COMPLETE_EVALUATION_ALL_PLANS.md  MASTER_PLAN.md  MODEL_OPTIMIZATION.md  OPTIMIZED_MODELS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Round_3_Final_Evaluation_Complete.md  Round_3_Final_Evaluation_Report.md  SETUP_CHECKLIST.md  demo_config.py  demo_profile.py  extract_code.bat  extract_code.sh  impact_acceleration_plan.md  main.py  pyproject.toml  requirements.txt  run_demo.py  run_validators.py  setup.py
.claude/: settings.local.json
agents/: __init__.py  chief_of_staff.py  engineering_agents.py  implementation_agents.py  learning_agents.py  product_agents.py  qa_agents.py  validator_agents.py
core/: __init__.py  config.py  llm_client.py  logging_utils.py  state_manager.py  user_profile.py
crewai_config/: .env.example  CHANGES_SUMMARY.md  ELITE_FEATURES.md  INDEX.md  INPUT_GUIDE.md  MODEL_SELECTION.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  USAGE_GUIDE.md  WORKFLOW_DIAGRAM.md  agents.py  agents.yaml  crew_config.yaml  main.py  project_brief.txt  project_brief_template.txt  requirements.txt  tasks.py  tasks.yaml  test_brief.txt  tools.py
crews/: __init__.py  curriculum_crew.py  demo_crews.py  platform_crew.py  qa_crew.py  strategy_crew.py  validator_crew.py
tasks/: __init__.py  curriculum_tasks.py  demo_implementation_tasks.py  demo_tasks.py  platform_tasks.py  qa_tasks.py  (+2 more)
(+18 files in other folders)
