[project]
name = "ai_mastery_platform"
version = "0.1.0"
description = "ai_mastery_platform using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,tools]==1.4.1",
]

[project.scripts]
ai_mastery_platform = "ai_mastery_platform.main:run"
run_crew = "ai_mastery_platform.main:run"
train = "ai_mastery_platform.main:train"
replay = "ai_mastery_platform.main:replay"
test = "ai_mastery_platform.main:test"
run_with_trigger = "ai_mastery_platform.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
